--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.12.1",
+    "@types/node-sass": "^4.11.2",
+    "contentful": "^9.1.26",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -19,6 +22,7 @@
     "@types/react-dom": "18.0.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "sass": "^1.51.0",
     "typescript": "4.6.3"
   }
 }
